force-app/main/default/objects/copado__User_Story__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>