force-app/main/default/objects/copado__User_Story__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <description>Current status of the implementation of the User Story.</description>
    <inlineHelpText>Current status of the implementation of the User Story.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Backburner</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ready for Design</fullName>
            </value>
            <value>
                <fullName>Design In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Development</fullName>
            </value>
            <value>
                <fullName>Development In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Technical Review</fullName>
            </value>
            <value>
                <fullName>Technical Review in Progress</fullName>
            </value>
            <value>
                <fullName>Testing In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Release</fullName>
            </value>
            <value>
                <fullName>Release In Progress</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>Doing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>