force-app/main/default/objects/copado__User_Story__c/fields/Epic_Name__c.field-meta.xml
<CustomField>
    <fullName>Epic_Name__c</fullName>
    <label>Epic_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>