force-app/main/default/objects/copado__User_Story__c/fields/Priority_test__c.field-meta.xml
<CustomField>
    <fullName>Priority_test__c</fullName>
    <label>Priority_test</label>
    <length>40</length>
    <type>Text</type>
</CustomField>