force-app/main/default/objects/copado__User_Story__c/recordTypes/Feature.recordType-meta.xml
<RecordType>
    <fullName>Feature</fullName>
    <active>true</active>
    <label>Feature</label>
</RecordType>