force-app/main/default/objects/copado__User_Story__c/validationRules/Pull_Request_Not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Pull_Request_Not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
copado__Pull_Requests_Approved__c = false, copado__Environment__c  &lt;&gt;  &apos;QA&apos;
)</errorConditionFormula>
    <errorMessage>Please make sure you have approved the related pull request for this user story.</errorMessage>
</ValidationRule>