force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Base_Branch__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Order__c</columns>
    <columns>copado__Latest_Commit_Date__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Environment_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Developer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>