force-app/main/default/objects/copado__User_Story__c/listViews/Demo.listView-meta.xml
<ListView>
    <fullName>Demo</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>copado__Org_Credential__c</field>
        <operation>contains</operation>
        <value>dev</value>
    </filters>
    <label>Demo</label>
</ListView>